--- a/memory_game/style.css
+++ b/memory_game/style.css
@@ -70,6 +70,15 @@ footer{
 	font-family: Raleway;
 }
 
+#score{
+	font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    color: black;
+    letter-spacing: 1px;
+    font-size: 25px;
+    padding: 0 0 20px 0;
+}
+
 .copyright{
 	float: left;
 }
